--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -26,7 +26,7 @@
                     class="nav-item mr-3"
                 {% endif %}
             >
-                <a class="nav-link" href="{% url 'about' %}">Acerca De</a>
+                <a class="nav-link" href="{% url 'about' %}">Nosotros</a>
             </li>
             <li 
                 {% if 'listados' in request.path %}
